feat: support multiple categrory attached to product
