# model/dto/product_create.go
@@ -1,0 +1,9 @@
+package dto
+
+type ProductRequest struct {
+	ID         int    `json:"id"`
+	Name       string `json:"name"`
+	Price      int    `json:"price"`
+	Stock      int    `json:"stock"`
+	Categories []int  `json:"categories"`
+}
