# model/product.go
@@ -1,8 +1,9 @@
 package model
 
 type Product struct {
-	ID    int    `json:"id"`
-	Name  string `json:"name"`
-	Price int    `json:"price"`
-	Stock int    `json:"stock"`
+	ID         int        `json:"id"`
+	Name       string     `json:"name"`
+	Price      int        `json:"price"`
+	Stock      int        `json:"stock"`
+	Categories []Category `json:"categories"`
 }
